Reuploading jquerry.appear.js. Deleting old images.

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,7 +3,7 @@
 
 <head>
     <!-- META SECTION -->
-    <title>iReceptionist</title>
+    <title>Receptional</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -82,9 +82,9 @@
                 <div class="page-content-holder">
                     <!-- TODO: Update this with Project info -->
                     <div class="block-heading block-heading-centralized this-animate" data-animate="fadeInDown">
-                        <h2><strong>iReceptionist</strong> &mdash; [insert tagline]</h2>
+                        <h2><strong>iReceptionist</strong> </h2>
                         <div class="block-heading-text">
-                            Powerful, clean and fast template which save a lot of your time at the begining of a new web project
+                            The exceptional assistant you've been searching for
                         </div>
                     </div>
 
