--- a/views/add_employees.handlebars
+++ b/views/add_employees.handlebars
@@ -159,6 +159,7 @@
                                     <th id="nameHead">Name</th>
                                     <th id="numberHead">Number</th>
                                     <th id="emailHead">Email</th>
+                                    <th></th>
                                 </tr>
                                 </thead>
                                 {{#employees}}
@@ -166,6 +167,11 @@
                                         <td>{{name}}</td>
                                         <td>{{phone_number}}</td>
                                         <td>{{email}}</td>
+                                        <td>
+                                            <form method="POST" action="/delete/{{_id}}?_method=DELETE">
+                                                <button type="submit">Delete</button>
+                                            </form>
+                                        </td>
                                     </tr>
                                 {{/employees}}
                                 <tbody>
