Add patient mode tab
currently links to view form page.

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -121,7 +121,7 @@
                             <div class="text-column">
                                 <h4>Contact Us</h4>
                                 <div class="text-column-info">
-                                    Proin luctus nulla fringilla massa euismod commodo. Donec sit amet elementum libero. Curabitur ut lorem id tellus malesuada tincidunt et eget purus.
+                                    If you have any questions, feel free to send us an email using the form below!
                                 </div>
                             </div>
 
@@ -160,9 +160,9 @@
                                 </div>
                                 <h4>Our Office</h4>
                                 <div class="text-column-info">
-                                    <p><strong><span class="fa fa-map-marker"></span> Address: </strong> 000 StreetName, Suite 111, City Name, ST 01234</p>
-                                    <p><strong><span class="fa fa-phone"></span> Phone: </strong> (012) 345-67-89</p>
-                                    <p><strong><span class="fa fa-envelope"></span> E-mail: </strong> <a href="#">johndoe@domain.com</a></p>
+                                    <p><strong><span class="fa fa-map-marker"></span> Address: </strong> 9500 Gilman Drive, La Jolla, CA 92092</p>
+                                    <p><strong><span class="fa fa-phone"></span> Phone: </strong> (111) 111-1111</p>
+                                    <p><strong><span class="fa fa-envelope"></span> E-mail: </strong> <a href="#">petervenkmen@ghostbusters.com</a></p>
                                 </div>
                             </div>
 
