--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -25,7 +25,7 @@
 
                 <!-- page logo -->
                 <div class="logo">
-                    <a href="/">iReceptionist</a>
+                    <a href="/home">Receptional</a>
                 </div>
                 <!-- ./page logo -->
 
@@ -82,9 +82,9 @@
                 <div class="page-content-holder">
                     <!-- TODO: Update this with Project info -->
                     <div class="block-heading block-heading-centralized this-animate" data-animate="fadeInDown">
-                        <h2><strong>iReceptionist</strong> </h2>
+                        <h2><strong>Receptional</strong> </h2>
                         <div class="block-heading-text">
-                            The exceptional assistant you've been searching for
+                            The exceptional assistant you've been searching for!
                         </div>
                     </div>
 
@@ -93,9 +93,13 @@
                             <div class="col-md-4">
 
                                 <div class="text-column this-animate" data-animate="fadeInLeft">
-                                    <h4>100% Responsive</h4>
-                                    <div class="text-column-info">
-                                        This allows you to create web applications of varying complexity for different devices
+                                    <h4>Made Just For You!</h4>
+                                    <div class="text-column this-animatez">
+                                        <ul>
+                                            <li>Your very own personal assistant to make check-ins fast &amp; easy.</li>
+                                            <li>Internal operations will be orgranized for efficiency! </li>
+                                            <li> Interactive fun for everyone !</li>
+                                        </ul>
                                     </div>
                                 </div>
                                 <div class="text-column this-animate" data-animate="fadeInLeft">
@@ -104,14 +108,12 @@
                                         Based on latest jQuery and Bootstrap3. You will get 40+ pages with samples and ready-to-use styled UI elements. Also template powered with 40+ jQuery and JavaScript plguins.
                                     </div>
                                 </div>
-
                             </div>
                             <div class="col-md-8 text-center this-animate" data-animate="fadeInRight">
                                 <img src="assets/atlant_monitor.png" class="img-responsive-mobile" />
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <!-- ./page content holder -->
             </div>
@@ -210,94 +212,60 @@
             <!-- page content wrapper -->
             <div class="page-content-wrap bg-light bg-texture-1">
 
-                <div class="page-content-holder padding-v-30">
-
-                    <div class="row">
-                        <div class="col-md-3">
+                <div class="page-content-holder padding-v-40">
+                    <div class="row row-centered">
+                        <div class="col-md-3 col-centered">
 
                             <div class="pricing-block">
                                 <div class="pb-block">
-                                    <h3>Free</h3>
-                                    <p>Proin luctus nulla fringilla massa euismod commodo. Donec sit amet elementum libero.</p>
+                                    <h3>Basic</h3>
+                                    <p>Everything your company needs to get started!</p>
                                 </div>
                                 <div class="pb-price">
                                     FREE<span></span>
                                 </div>
                                 <div class="pb-block">
-                                    <p><span class="fa fa-check"></span> Donec sit amet</p>
-                                    <p><span class="fa fa-check"></span> Curabitur ut lorem</p>
-                                    <p><span class="fa fa-times text-danger"></span> Lorem ipsum dolor</p>
-                                    <p><span class="fa fa-times text-danger"></span> Praesent facilisis tellus </p>
-                                    <p><span class="fa fa-times text-danger"></span> Curabitur non venenatis</p>
-                                    <p><span class="fa fa-times text-danger"></span> Donec quis mattis est</p>
-                                </div>
-                                <!--
-                                <div class="pb-block">
-                                    <button class="btn btn-primary btn-block">Sing In</button>
-                                </div> -->
-                            </div>
-
-                        </div>
-                        <div class="col-md-3">
-
-                            <div class="pricing-block">
-                                <div class="pb-block">
-                                    <h3>Beginner</h3>
-                                    <p>Proin luctus nulla fringilla massa euismod commodo. Donec sit amet elementum libero.</p>
-                                </div>
-                                <div class="pb-price">
-                                    <span>$</span> 8 <span>/ per month</span>
-                                </div>
-                                <div class="pb-block">
-                                    <p><span class="fa fa-check"></span> Donec sit amet</p>
-                                    <p><span class="fa fa-check"></span> Curabitur ut lorem</p>
-                                    <p><span class="fa fa-check"></span> Lorem ipsum dolor</p>
-                                    <p><span class="fa fa-times text-danger"></span> Praesent facilisis tellus </p>
-                                    <p><span class="fa fa-times text-danger"></span> Curabitur non venenatis</p>
-                                    <p><span class="fa fa-times text-danger"></span> Donec quis mattis est</p>
+                                    <p><span class="fa fa-check"></span> Lively Virtual Recptionist! </p>
+                                    <p><span class="fa fa-check"></span> Unlimited visitor check ins</p>
+                                    <p><span class="fa fa-check"></span> Customizable forms </p>
                                 </div>
                             </div>
 
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-centered">
 
                             <div class="pricing-block">
                                 <div class="pb-block">
-                                    <h3>Medium</h3>
-                                    <p>Proin luctus nulla fringilla massa euismod commodo. Donec sit amet elementum libero.</p>
+                                    <h3>Premium</h3>
                                 </div>
                                 <div class="pb-price">
                                     <span>$</span> 12 <span>/ per month</span>
                                 </div>
                                 <div class="pb-block">
-                                    <p><span class="fa fa-check"></span> Donec sit amet</p>
-                                    <p><span class="fa fa-check"></span> Curabitur ut lorem</p>
-                                    <p><span class="fa fa-check"></span> Lorem ipsum dolor</p>
-                                    <p><span class="fa fa-check"></span> Praesent facilisis tellus </p>
-                                    <p><span class="fa fa-times text-danger"></span> Curabitur non venenatis</p>
-                                    <p><span class="fa fa-times text-danger"></span> Donec quis mattis est</p>
+                                    <p><span class="fa fa-check"></span> All the perks of the Basic Package!</p>
+                                    <p><span class="fa fa-check"></span> Visitor Photos </p>
+                                    <p><span class="fa fa-check"></span> SMS Hosting </p>
+                                    <p><span class="fa fa-check"></span> Customer Support </p>
                                 </div>
                             </div>
 
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-centered">
 
                             <div class="pricing-block">
                                 <div class="pb-block">
-                                    <h3>Premium</h3>
-                                    <p>Proin luctus nulla fringilla massa euismod commodo. Donec sit amet elementum libero.</p>
+                                    <h3>Enterprise</h3>
                                 </div>
                                 <div class="pb-price">
-                                    <span>$</span> 19 <span>/ per month</span>
+                                    <span>$</span> 24 <span>/ per month</span>
                                 </div>
                                 <div class="pb-block">
-                                    <p><span class="fa fa-check"></span> Donec sit amet</p>
-                                    <p><span class="fa fa-check"></span> Curabitur ut lorem</p>
-                                    <p><span class="fa fa-check"></span> Lorem ipsum dolor</p>
-                                    <p><span class="fa fa-check"></span> Praesent facilisis tellus </p>
-                                    <p><span class="fa fa-check"></span> Curabitur non venenatis</p>
-                                    <p><span class="fa fa-check"></span> Donec quis mattis est</p>
-                                </div> 
+                                    <p><span class="fa fa-check"></span> All the perks of the Basic Package!</p>
+                                    <p><span class="fa fa-check"></span> All the perks of the Premium Package!</p>
+                                    <p><span class="fa fa-check"></span> Data Analysis </p>
+                                    <p><span class="fa fa-check"></span> Growth Charts </p>
+                                    <p><span class="fa fa-check"></span> 24/7 Customer Support </p>
+                                </div>
                             </div>
 
                         </div>
