--- a/views/dashboard_employee.handlebars
+++ b/views/dashboard_employee.handlebars
@@ -68,6 +68,11 @@
                         <a href="#" class="x-navigation-minimize"><span class="fa fa-dedent"></span></a>
                     </li>
                     <!-- END TOGGLE NAVIGATION -->
+                    <!-- START PATIENT MODE TAB -->
+                    <li class="">
+                        <a href="viewform"><span class="mo-control"></span> <span class="xn-text">Patient Mode</span></a>
+                    </li>
+                    <!-- END PATIENT MODE TAB -->
                     <!-- SEARCH -->
                     <li class="xn-search">
                         <form role="form">
