some DRY stuff, and added layouts to the folders

--- a/views/layouts/navigation_admin.handlebars
+++ b/views/layouts/navigation_admin.handlebars
@@ -91,7 +91,7 @@
             </ul>
             <!-- END X-NAVIGATION VERTICAL -->
 			
-			{{{body}}
+			{{{body}}}
 			
 	<!-- START PRELOADS -->
     <audio id="audio-alert" src="audio/alert.mp3" preload="auto"></audio>
