--- a/views/layouts/navigation_employee.handlebars
+++ b/views/layouts/navigation_employee.handlebars
@@ -45,7 +45,7 @@
                         <a href="dashboard_employee"><span class="fa fa-dashboard"></span> <span class="xn-text">Dashboard</span></a>
                     </li>                    
                     <li class="active">
-                        <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
+                        <a href="patient_queueE"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
                     </li>
                     <li class="active">
                         <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
