Conformed patient_queue and edit form to template.
Moved png files to hide Atlant logos
Updated landing page info - still need to.

--- a/views/add_employees.handlebars
+++ b/views/add_employees.handlebars
@@ -89,12 +89,8 @@
             </div>
         </div>
         <!-- END CONTENT WRAPPER -->
-    </div>
-    <!-- END PAGE CONTENT -->
-</div>
-<!-- END PAGE CONTAINER -->
 
-<!-- START ADD MODAL-->
+<!-- START ADD EMPLOYEE MODAL-->
 <div class="modal fade" id="addEmployee" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -137,8 +133,9 @@
         </div>
     </div>
 </div>
-<!-- END ADD MODAL-->
+<!-- END ADD EMPLOYEE MODAL-->
 
+<!-- START CSV IMPORT MODAL -->
 <div class="modal fade" id="addEmployeeCSV" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -167,8 +164,9 @@
         </div>
     </div>
 </div>
+<!-- END CSV IMPORT MODAL -->
 
-                <!-- SIGN OUT MESSAGE BOX-->
+<!-- START SIGN OUT MESSAGE BOX-->
 <div class="message-box animated fadeIn" data-sound="alert" id="mb-signout">
     <div class="mb-container">
         <div class="mb-middle">
@@ -254,6 +252,5 @@ alert('hi');
 }	);
 </script>
 <!-- END ADD EMPLOYEE SCRIPT -->
-<!-- END SCRIPTS -->
-</body>
+
 </html>
