--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -103,10 +103,7 @@
                                     </div>
                                 </div>
                                 <div class="text-column this-animate" data-animate="fadeInLeft">
-                                    <h4>Admin Template</h4>
-                                    <div class="text-column-info">
-                                        Based on latest jQuery and Bootstrap3. You will get 40+ pages with samples and ready-to-use styled UI elements. Also template powered with 40+ jQuery and JavaScript plguins.
-                                    </div>
+
                                 </div>
                             </div>
                             <div class="col-md-8 text-center this-animate" data-animate="fadeInRight">
@@ -133,13 +130,10 @@
                         <div class="col-md-8 this-animate" data-animate="fadeInLeft">
 
                             <div class="block-heading block-heading-centralized">
-                                <h2 class="heading-underline">Optimized for mobile devices</h2>
+                                <h2 class="heading-underline"><strong>FUN</strong>ctional</h2>
                                 <div class="block-heading-text">
                                     Proin luctus nulla fringilla massa euismod commodo. Donec sit amet elementum libero. Curabitur ut lorem id tellus malesuada tincidunt et eget purus. Cras molestie, velit quis viverra ultrices, tortor erat suscipit arcu, a ullamcorper neque lorem et massa. Praesent facilisis tellus nec rutrum luctus. Curabitur non venenatis metus, vitae rhoncus risus. Donec quis mattis est. Proin ut augue vel odio condimentum ornare.
                                 </div>
-                            </div>
-                            <div class="block this-animate" data-animate="fadeInLeft">
-                                <img src="assets/atlant_technologies.png" class="img-responsive" />
                             </div>
                         </div>
                         <div class="col-md-4 this-animate text-center" data-animate="fadeInRight">
@@ -171,9 +165,9 @@
                                 <div class="text-column-icon">
                                     <span class="fa fa-support"></span>
                                 </div>
-                                <h4>Free Updates & Support</h4>
+                                <h4>Do More</h4>
                                 <div class="text-column-info">
-                                    We provide <strong>free</strong> support for each customer who purchase template. We will do our best to help you.
+                                    Our <strong>easy</strong> to use features allows you to do more with less work.
                                 </div>
                             </div>
                         </div>
@@ -183,9 +177,9 @@
                                 <div class="text-column-icon">
                                     <span class="fa fa-expand"></span>
                                 </div>
-                                <h4>Responsive & Retina Ready</h4>
+                                <h4>Save More</h4>
                                 <div class="text-column-info">
-                                    Template builded using newest technologies, that gives you possibilities use it wherever you want.
+                                    Your receptional assistant keeps things organized and efficient so you can save time and money.
                                 </div>
                             </div>
                         </div>
@@ -195,9 +189,9 @@
                                 <div class="text-column-icon">
                                     <span class="fa fa-clock-o"></span>
                                 </div>
-                                <h4>Time Saver</h4>
+                                <h4>Smile More</h4>
                                 <div class="text-column-info">
-                                    With this template you will save really many time. And it's <strong>only $23</strong>.
+                                    With less time in the waste bin and more money rolling in you can't help but smile more.
                                 </div>
                             </div>
                         </div>
