--- a/views/layouts/navigation_peter.handlebars
+++ b/views/layouts/navigation_peter.handlebars
@@ -42,7 +42,7 @@
             </li>
             <li class="xn-title">Navigation</li>
             <li class="active">
-                <a href="employee"><span class="fa fa-desktop"></span> <span class="xn-text">Overview</span></a>
+                <a href="employee"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
             </li>
             <li class="active">
                 <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">[Something]</span></a>
