--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -57,6 +57,9 @@
                 <a href="patient_queue"><span class="fa fa-clock-o"></span> <span
                         class="xn-text">Patient Queue</span></a>
             </li>
+            <li class="active">
+                <a href="patients_mode"><span class="fa fa-pencil"></span> <span class="xn-text">Patient Mode</span></a>
+            </li>
             {{#if user.companyname}}
                 <li class="active">
                     <a href="add_employees"><span class="fa fa-users"></span> <span class="xn-text">Manage Employees</span></a>
