--- a/views/dashboard_peter.handlebars
+++ b/views/dashboard_peter.handlebars
@@ -1,3 +1,69 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- META SECTION -->
+    <title>Peter's Dashboard</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <!-- END META SECTION -->
+
+    <!-- CSS INCLUDE -->
+    <link rel="stylesheet" type="text/css" id="theme" href="css/theme-default.css"/>
+    <!-- EOF CSS INCLUDE -->
+</head>
+<body>
+<!-- START PAGE CONTAINER -->
+<div class="page-container">
+
+    <!-- START PAGE SIDEBAR -->
+    <div class="page-sidebar">
+        <!-- START X-NAVIGATION -->
+        <ul class="x-navigation">
+            <li class="xn-logo">
+                <a href="index.html">[Company Name]</a>
+                <a href="#" class="x-navigation-control"></a>
+            </li>
+            <li class="xn-profile">
+                <a href="#" class="profile-mini">
+                    <img src="assets/images/users/avatar.jpg" alt="Peter"/>
+                </a>
+                <div class="profile">
+                    <div class="profile-image">
+                        <img src="assets/images/users/avatar.jpg" alt="Peter"/>
+                    </div>
+                    <div class="profile-data">
+                        <div class="profile-data-name">[Peter]</div>
+                        <div class="profile-data-title">Product Owner</div>
+                    </div>
+                </div>
+            </li>
+            <li class="xn-title">Navigation</li>
+            <li class="active">
+                <a href="employee"><span class="fa fa-desktop"></span> <span class="xn-text">Overview</span></a>
+            </li>
+            <li class="active">
+                <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">[Something]</span></a>
+            </li>
+            <li class="active">
+                <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">[Something Else]</span></a>
+            </li>
+            <li class="active">
+                <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">[Some Other Thing]</span></a>
+            </li>
+            <li class="active">
+                <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">[Slack]</span></a>
+            </li>
+            <li class="active">
+                <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">Settings</span></a>
+            </li>
+        </ul>
+        <!-- END X-NAVIGATION -->
+    </div>
+    <!-- END PAGE SIDEBAR -->
+
     <!-- PAGE CONTENT -->
     <div class="page-content">
 
@@ -8,6 +74,11 @@
                 <a href="#" class="x-navigation-minimize"><span class="fa fa-dedent"></span></a>
             </li>
             <!-- END TOGGLE NAVIGATION -->
+            <!-- START PATIENT MODE TAB -->
+            <li class="">
+                <a href="viewform"><span class="mo-control"></span> <span class="xn-text">Patient Mode</span></a>
+            </li>
+            <!-- END PATIENT MODE TAB -->
             <!-- SEARCH -->
             <li class="xn-search">
                 <form role="form">
@@ -294,6 +365,45 @@
 </div>
 <!-- END MESSAGE BOX-->
 
+<!-- START PRELOADS -->
+<audio id="audio-alert" src="audio/alert.mp3" preload="auto"></audio>
+<audio id="audio-fail" src="audio/fail.mp3" preload="auto"></audio>
+<!-- END PRELOADS -->
+
+<!-- START SCRIPTS -->
+<!-- START PLUGINS -->
+<script type="text/javascript" src="js/plugins/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="js/plugins/jquery/jquery-ui.min.js"></script>
+<script type="text/javascript" src="js/plugins/bootstrap/bootstrap.min.js"></script>
+<!-- END PLUGINS -->
+
+<!-- START THIS PAGE PLUGINS-->
+<script type='text/javascript' src='js/plugins/icheck/icheck.min.js'></script>
+<script type="text/javascript" src="js/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js"></script>
+<script type="text/javascript" src="js/plugins/scrolltotop/scrolltopcontrol.js"></script>
+
+<script type="text/javascript" src="js/plugins/morris/raphael-min.js"></script>
+<script type="text/javascript" src="js/plugins/morris/morris.min.js"></script>
+<script type="text/javascript" src="js/plugins/rickshaw/d3.v3.js"></script>
+<script type="text/javascript" src="js/plugins/rickshaw/rickshaw.min.js"></script>
+<script type='text/javascript' src='js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js'></script>
+<script type='text/javascript' src='js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js'></script>
+<script type='text/javascript' src='js/plugins/bootstrap/bootstrap-datepicker.js'></script>
+<script type="text/javascript" src="js/plugins/owl/owl.carousel.min.js"></script>
+
+<script type="text/javascript" src="js/plugins/moment.min.js"></script>
+<script type="text/javascript" src="js/plugins/daterangepicker/daterangepicker.js"></script>
+<!-- END THIS PAGE PLUGINS-->
+
+<!-- START TEMPLATE -->
+<script type="text/javascript" src="js/plugins.js"></script>
+<script type="text/javascript" src="js/actions.js"></script>
+
+<script type="text/javascript" src="js/demo_dashboard.js"></script>
+<!-- END TEMPLATE -->
+<!-- END SCRIPTS -->
+</body>
+</html>
 
 
 
