--- a/views/subdomain_login.handlebars
+++ b/views/subdomain_login.handlebars
@@ -2,55 +2,53 @@
 <html lang="en" class="body-full-height">
     <head>        
         <!-- META SECTION -->
-        <title>Employee Login</title>            
+        <title>Atlant - Responsive Bootstrap Admin Template</title>            
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        
-        <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <!-- END META SECTION -->
         
-        <!-- CSS INCLUDE -->        
+        <!-- CSS INCLUDE -->
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>    
         <link rel="stylesheet" type="text/css" id="theme" href="css/theme-default.css"/>
-        <!-- EOF CSS INCLUDE -->                                    
+        <!-- EOF CSS INCLUDE -->                                     
     </head>
     <body>
-        
-        <div class="login-container">
-        
+        {{#if msg}}
+            <div class="alert alert-danger">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <strong>{{msg}}</strong>
+            </div>
+        {{/if}}
+
+        <div class="login-container lightmode">
             <div class="login-box animated fadeInDown">
                 <div class="login-logo"></div>
                 <div class="login-body">
-                    <div class="login-title"><strong> {{success.msg}} - Employee Login</strong></div>
-                    <form class="form-horizontal" method="post">
+                    <div class="login-title"><strong>Find Your Company</strong></div>
+                    <form class="form-horizontal" method="POST">
                     <div class="form-group">
                         <div class="col-md-12">
-                            <input type="email" name="email" class="form-control" placeholder="Username"/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <input type="password" name="password" class="form-control" placeholder="Password"/>
+                            <input type="text" name="subdomain" id="subdomain" class="form-control" placeholder="Your Company Subdomain"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-6">
-                            <a href="#" class="btn btn-link btn-block">Forgot your password?</a>
-                        </div>
-                        <div class="col-md-6">
-                            <button class="btn btn-info btn-block">Log In</button>
+                            <button class="btn btn-info btn-block">Login</button>
                         </div>
                     </div>
                     </form>
                 </div>
                 <div class="login-footer">
                     <div class="pull-left">
-                        &copy; 2016 Receptional
+                        &copy; 2014 AppName
                     </div>
                     <div class="pull-right">
-                        <a href="#">About</a> |
+                        <a href="/about">About</a> |
                         <a href="#">Privacy</a> |
-                        <a href="#">Contact Us</a>
+                        <a href="/contact">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -59,9 +57,4 @@
         
     </body>
 </html>
-
-
-
-
-
 
