--- a/views/layouts/navigation_employee.handlebars
+++ b/views/layouts/navigation_employee.handlebars
@@ -23,7 +23,7 @@
                 <!-- START X-NAVIGATION -->
                 <ul class="x-navigation">
                     <li class="xn-logo">
-                        <a href="index.html">Receptional</a>
+                        <a href="/home">Receptional</a>
                         <a href="#" class="x-navigation-control"></a>
                     </li>
                     <li class="xn-profile">
@@ -45,7 +45,7 @@
                         <a href="dashboard_employee"><span class="fa fa-dashboard"></span> <span class="xn-text">Dashboard</span></a>
                     </li>                    
                     <li class="active">
-                        <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
+                        <a href="patient_queueE"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
                     </li>
                     <li class="active">
                         <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
