--- a/views/add_employees.handlebars
+++ b/views/add_employees.handlebars
@@ -1,100 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <!-- META SECTION -->
     <title>Manage Employees</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <!-- END META SECTION -->
-
-    <!-- CSS INCLUDE -->
-    <link rel="stylesheet" type="text/css" id="theme" href="css/theme-default.css" />
-    <!-- EOF CSS INCLUDE -->
 </head>
-
-<body>
-<!-- START PAGE CONTAINER -->
-<div class="page-container">
-    <!-- START PAGE SIDEBAR -->
-    <div class="page-sidebar">
-        <!-- START SIDE-NAVIGATION -->
-        <ul class="x-navigation">
-            <li class="xn-logo">
-                <a href="home">[Company Name]</a>
-                <a href="#" class="x-navigation-control"></a>
-            </li>
-            <li class="xn-profile">
-                <a href="#" class="profile-mini">
-                    <img src="assets/images/users/avatar.jpg" alt="John Doe" />
-                </a>
-                <div class="profile">
-                    <div class="profile-image">
-                        <img src="assets/images/users/avatar.jpg" alt="John Doe" />
-                    </div>
-                    <div class="profile-data">
-                        <div class="profile-data-name">{{user.companyname}}</div>
-                        <div class="profile-data-title">Owner</div>
-                    </div>
-                </div>
-            </li>
-            <li class="xn-title">Navigation</li>
-            <li class="active">
-                <a href="dashboard_admin"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
-            </li>
-            <li class="active">
-                <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
-            </li>
-            <li class="active">
-                <a href="patients_mode"><span class="fa fa-pencil"></span> <span class="xn-text">Patient Mode</span></a>
-            </li>
-            <li class="active">
-                <a href="add_employees"><span class="fa fa-users"></span> <span class="xn-text">Manage Employees</span></a>
-            </li>
-            <li class="active">
-                <a href="form"><span class="fa fa-pencil"></span> <span class="xn-text">Edit Form</span></a>
-            </li>
-            <li class="active">
-                <a href="viewform"><span class="fa fa-pencil"></span> <span class="xn-text">View Form</span></a>
-            </li>
-            <li class="active">
-                <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
-            </li>
-            <li class="active">
-                <a href="settings"><span class="fa fa-cogs"></span> <span class="xn-text">Settings</span></a>
-            </li>
-        </ul>
-        <!-- END SIDE-NAVIGATION -->
-    </div>
-    <!-- END PAGE SIDEBAR -->
-
-    <!-- PAGE CONTENT -->
-    <div class="page-content">
-
-        <!-- START X-NAVIGATION VERTICAL -->
-        <ul class="x-navigation x-navigation-horizontal x-navigation-panel">
-            <!-- TOGGLE NAVIGATION -->
-            <li class="xn-icon-button">
-                <a href="#" class="x-navigation-minimize"><span class="fa fa-dedent"></span></a>
-            </li>
-            <!-- END TOGGLE NAVIGATION -->
-            <!-- SEARCH -->
-            <li class="xn-search">
-                <form role="form">
-                    <input type="text" name="search" placeholder="Search..." />
-                </form>
-            </li>
-            <!-- END SEARCH -->
-            <!-- SIGN OUT -->
-            <li class="xn-icon-button pull-right">
-                <a href="#" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
-            </li>
-            <!-- END SIGN OUT -->
-        </ul>
-        <!-- END X-NAVIGATION VERTICAL -->
 
         <!-- START BREADCRUMB -->
         <ul class="breadcrumb">
@@ -162,6 +69,7 @@
                                     <th id="nameHead">Name</th>
                                     <th id="numberHead">Number</th>
                                     <th id="emailHead">Email</th>
+                                    <th></th>
                                 </tr>
                                 </thead>
                                 {{#employees}}
@@ -171,9 +79,9 @@
                                         <td>{{email}}</td>
                                         <td>
                                             <form method="POST" action="/delete/{{_id}}?_method=DELETE">
-                                               <button type="submit">Delete</button>
-                                          </form>
-                                       </td>
+                                                <button type="submit">Delete</button>
+                                            </form>
+                                        </td>
                                     </tr>
                                 {{/employees}}
                                 <tbody>
@@ -187,12 +95,8 @@
             </div>
         </div>
         <!-- END CONTENT WRAPPER -->
-    </div>
-    <!-- END PAGE CONTENT -->
-</div>
-<!-- END PAGE CONTAINER -->
 
-<!-- START ADD MODAL-->
+<!-- START ADD EMPLOYEE MODAL-->
 <div class="modal fade" id="addEmployee" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -235,8 +139,9 @@
         </div>
     </div>
 </div>
-<!-- END ADD MODAL-->
+<!-- END ADD EMPLOYEE MODAL-->
 
+<!-- START CSV IMPORT MODAL -->
 <div class="modal fade" id="addEmployeeCSV" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -265,8 +170,9 @@
         </div>
     </div>
 </div>
+<!-- END CSV IMPORT MODAL -->
 
-                <!-- SIGN OUT MESSAGE BOX-->
+<!-- START SIGN OUT MESSAGE BOX-->
 <div class="message-box animated fadeIn" data-sound="alert" id="mb-signout">
     <div class="mb-container">
         <div class="mb-middle">
@@ -286,39 +192,6 @@
 </div>
 <!-- END SIGN OUT MESSAGE BOX-->
 
-<!-- START PRELOADS -->
-<audio id="audio-alert" src="audio/alert.mp3" preload="auto"></audio>
-<audio id="audio-fail" src="audio/fail.mp3" preload="auto"></audio>
-<!-- END PRELOADS -->
-
-<!-- START SCRIPTS -->
-<!-- START PLUGINS -->
-<script type="text/javascript" src="js/plugins/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="js/plugins/jquery/jquery-ui.min.js"></script>
-<script type="text/javascript" src="js/plugins/bootstrap/bootstrap.min.js"></script>
-<!-- END PLUGINS -->
-
-<!-- THIS PAGE PLUGINS -->
-<script type='text/javascript' src='js/plugins/icheck/icheck.min.js'></script>
-<script type="text/javascript" src="js/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js"></script>
-<script type="text/javascript" src="js/plugins/scrolltotop/scrolltopcontrol.js"></script>
-
-<script type="text/javascript" src="js/plugins/datatables/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="js/plugins/tableexport/tableExport.js"></script>
-<script type="text/javascript" src="js/plugins/tableexport/jquery.base64.js"></script>
-<script type="text/javascript" src="js/plugins/tableexport/html2canvas.js"></script>
-<script type="text/javascript" src="js/plugins/tableexport/jspdf/libs/sprintf.js"></script>
-<script type="text/javascript" src="js/plugins/tableexport/jspdf/jspdf.js"></script>
-<script type="text/javascript" src="js/plugins/tableexport/jspdf/libs/base64.js"></script>
-<!-- END PAGE PLUGINS -->
-
-<!-- START TEMPLATE -->
-<script type="text/javascript" src="js/plugins.js"></script>
-<script type="text/javascript" src="js/actions.js"></script>
-<!-- END TEMPLATE -->
-
-<script type="text/javascript" src="js/moment.min.js"></script>
-<script type="text/javascript" src="js/bootstrap-sortable.js"></script>
 
 <!-- START ADD EMPLOYEE  SCRIPT -->
 <script type="text/javascript">
@@ -385,6 +258,5 @@ alert('hi');
 }	);
 </script>
 <!-- END ADD EMPLOYEE SCRIPT -->
-<!-- END SCRIPTS -->
-</body>
+
 </html>
