--- a/views/patient_queue.handlebars
+++ b/views/patient_queue.handlebars
@@ -4,7 +4,6 @@
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" id="theme" href="css/theme-default.css"/>
 
     <link rel="stylesheet" type="text/css"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
@@ -16,136 +15,6 @@
     <script src="js/bootstrap-sortable.js"></script>
 </head>
 
-<body>
-
-<!-- START PAGE CONTAINER -->
-<div class="page-container">
-    <!-- START PAGE SIDEBAR -->
-    <div class="page-sidebar">
-        <!-- START X-NAVIGATION -->
-        <ul class="x-navigation">
-            <li class="xn-logo">
-                <a href="index.html">[Company Name]</a>
-                <a href="#" class="x-navigation-control"></a>
-            </li>
-            <li class="xn-profile">
-                <a href="#" class="profile-mini">
-                    <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
-                </a>
-                <div class="profile">
-                    <div class="profile-image">
-                        <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
-                    </div>
-                    <div class="profile-data">
-                        {{#if user.companyname}}
-                            <div class="profile-data-name">{{user.companyname}}</div>
-                            <div class="profile-data-title">Owner</div>
-                        {{else}}
-                            <div class="profile-data-name">{{user.name}}</div>
-                            <div class="profile-data-title">Employee</div>
-                        {{/if}}
-                    </div>
-                </div>
-            </li>
-            <li class="xn-title">Navigation</li>
-            <li class="active">
-                <a href="/"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
-            </li>
-            <li class="active">
-                <a href="patient_queue"><span class="fa fa-clock-o"></span> <span
-                        class="xn-text">Patient Queue</span></a>
-            </li>
-            <li class="active">
-                <a href="patients_mode"><span class="fa fa-pencil"></span> <span class="xn-text">Patient Mode</span></a>
-            </li>
-            {{#if user.companyname}}
-                <li class="active">
-                    <a href="add_employees"><span class="fa fa-users"></span> <span class="xn-text">Manage Employees</span></a>
-                </li>
-                <li class="active">
-                    <a href="form"><span class="fa fa-pencil"></span> <span class="xn-text">Edit Form</span></a>
-                </li>
-                <li class="active">
-                    <a href="viewform"><span class="fa fa-pencil"></span> <span class="xn-text">View Form</span></a>
-                </li>
-            {{/if}}
-            <li class="active">
-                <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
-            </li>
-            <li class="active">
-                <a href="settings"><span class="fa fa-cogs"></span> <span class="xn-text">Settings</span></a>
-            </li>
-        </ul>
-        <!-- END X-NAVIGATION -->
-    </div>
-    <!-- END PAGE SIDEBAR -->
-
-    <div class="page-content">
-        <!-- START X-NAVIGATION VERTICAL -->
-        <ul class="x-navigation x-navigation-horizontal x-navigation-panel">
-            <!-- TOGGLE NAVIGATION -->
-            <li class="xn-icon-button">
-                <a href="#" class="x-navigation-minimize"><span class="fa fa-dedent"></span></a>
-            </li>
-            <!-- END TOGGLE NAVIGATION -->
-            <!-- SEARCH -->
-            <li class="xn-search">
-                <form role="form">
-                    <input type="text" name="search" placeholder="Search..."/>
-                </form>
-            </li>
-            <!-- END SEARCH -->
-            <!-- SIGN OUT -->
-            <li class="xn-icon-button pull-right">
-                <a href="/logout" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
-            </li>
-            <!-- END SIGN OUT -->
-            <!-- MESSAGES -->
-            <li class="xn-icon-button pull-right">
-                <a href="#"><span class="fa fa-comments"></span></a>
-                <div class="informer informer-danger">4</div>
-                <div class="panel panel-primary animated zoomIn xn-drop-left xn-panel-dragging">
-                    <div class="panel-heading">
-                        <h3 class="panel-title"><span class="fa fa-comments"></span> Messages</h3>
-                        <div class="pull-right">
-                            <span class="label label-danger">4 new</span>
-                        </div>
-                    </div>
-                    <div class="panel-body list-group list-group-contacts scroll" style="height: 200px;">
-                        <a href="#" class="list-group-item">
-                            <div class="list-group-status status-online"></div>
-                            <img src="assets/images/users/user2.jpg" class="pull-left" alt="John Doe"/>
-                            <span class="contacts-title">John Doe</span>
-                            <p>Praesent placerat tellus id augue condimentum</p>
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <div class="list-group-status status-away"></div>
-                            <img src="assets/images/users/user.jpg" class="pull-left" alt="Dmitry Ivaniuk"/>
-                            <span class="contacts-title">Dmitry Ivaniuk</span>
-                            <p>Donec risus sapien, sagittis et magna quis</p>
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <div class="list-group-status status-away"></div>
-                            <img src="assets/images/users/user3.jpg" class="pull-left" alt="Nadia Ali"/>
-                            <span class="contacts-title">Nadia Ali</span>
-                            <p>Mauris vel eros ut nunc rhoncus cursus sed</p>
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <div class="list-group-status status-offline"></div>
-                            <img src="assets/images/users/user6.jpg" class="pull-left" alt="Darth Vader"/>
-                            <span class="contacts-title">Darth Vader</span>
-                            <p>I want my money back!</p>
-                        </a>
-                    </div>
-                    <div class="panel-footer text-center">
-                        <a href="pages-messages.html">Show all messages</a>
-                    </div>
-                </div>
-            </li>
-            <!-- END MESSAGES -->
-        </ul>
-        <!-- END X-NAVIGATION VERTICAL -->
-
         <!-- START BREADCRUMB -->
         <ul class="breadcrumb">
             <li><a href="/">Home</a></li>
@@ -155,33 +24,61 @@
 
         <!-- PAGE CONTENT WRAPPER -->
         <div class="page-content-wrap">
-            <div class="container">
-                <h2>Patient Queue</h2>
-                <table class="table">
-                    <thead style="font-size: 20px;">
-                    <tr>
-                        <th>Name</th>
-                        <th>Phone</th>
-                        <th>Email</th>
-                        <th>Time in</th>
-                        <th>Time out</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {{#patients}}
+            <div class="row">
+                <div class="col-md-12">
+                    <!-- START MANAGE EMPLOYEES DATATABLE -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Patient Queue</h3>
+                        </div>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table datatable">
+                            <thead style="font-size: 20px;">
                             <tr>
-                                <td>{{name}}</td>
-                                <td>{{phone_number}}</td>
-                                <td>{{email}}</td>
-                                <td>{{checkinTime}}</td>
+                                <th id="patientNum">#</th>
+                                <th id="patientFN">First name</th>
+                                <th id="patientLast">Last name</th>
+                                <th id="patientTel">Phone</th>
+                                <th id="patientEmail">Email</th>
+                                <th id="patientIn">Time in</th>
+                                <th id="patientOut">Time out</th>
                             </tr>
-                    {{/patients}}
-                    </tbody>
-                </table>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Anthony</td>
+                                <td>(123)456-7890</td>
+                                <td>markanthony@hotmail.com</td>
+                                <td>8:50 A.M.</td>
+                                <td>9:40 A.M.</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Sam</td>
+                                <td>Wise</td>
+                                <td>(098)765-4321</td>
+                                <td>samwise@yahoo.com</td>
+                                <td>10:10 A.M.</td>
+                                <td>12:10 P.M.</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Valentino</td>
+                                <td>Do</td>
+                                <td>(141)854-3948</td>
+                                <td>valentinodo@aim.com</td>
+                                <td>1:30 P.M.</td>
+                                <td>2:10 P.M.</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
 
 
 </body>
