jk re-add template logos
Will replace with blank png files for presentation so that ATLANT
doesnt show up

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -61,7 +61,7 @@
                         <li><a href="/logout">Log Out</a></li>
                     {{else}}
                         <li><a href="/signup">Sign Up</a></li>
-                        <li><a href="/login">Login As Owner</a></li>
+                        <li><a href="/login">Owner Login</a></li>
                         <li><a href="/subdomain_login">Find Your Company</a></li>
                     {{/if}}
                 </ul>
