--- a/views/login_employee.handlebars
+++ b/views/login_employee.handlebars
@@ -19,7 +19,7 @@
         <div class="login-container">
         
             <div class="login-box animated fadeInDown">
-                <div class="login-logo"></div>
+                <div class=""></div>
                 <div class="login-body">
                     <div class="login-title"><strong>{{subdomain}} - Employee Login</strong></div>
                     <div class="login-title"><strong> {{success.msg}} - Employee Login</strong></div>
