--- a/views/layouts/navigation_employee.handlebars
+++ b/views/layouts/navigation_employee.handlebars
@@ -48,7 +48,7 @@
                         <a href="patients_mode"><span class="fa fa-pencil"></span> <span class="xn-text">Patient Mode</span></a>
                     </li>
                     <li class="active">
-                        <a href="patient_queuee"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
+                        <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
                     </li>
                     <li class="active">
                         <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
